--- a/wnCCR/index.html
+++ b/wnCCR/index.html
@@ -13,125 +13,129 @@
       <section>
         <div class="winType">
           <div class="hText"><h2>Select type of window</h2></div>
-          <div class="btnw winOne">
-            <svg
-              id="windowIco"
-              width="44"
-              height="62"
-              viewBox="0 0 44 62"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-              data-svg="a2"
-              uk-tooltip="title: Поворотньо відкидне; pos: right"
-              title=""
-              aria-expanded="false"
-            >
-              <path
-                d="M43 2V1H42H2H1V2V60V61H2H42H43V60V2Z"
-                stroke-width="2"
-              ></path>
-              <path
-                d="M38 5L39 5L39 6L39 56L39 57L38 57L5.99998 57L4.99998 57L4.99998 56L4.99998 6L4.99998 5L5.99998 5L38 5Z"
-                stroke-width="2"
-              ></path>
-              <path
-                d="M6 56L38 30.9393L6 6"
-                stroke-width="2"
-                stroke-miterlimit="10"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></path>
-            </svg>
-          </div>
-          <div class="btnw winTwo">
-            <svg
-              id="windowIco"
-              width="86"
-              height="62"
-              viewBox="0 0 86 62"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-              data-svg="b6"
-            >
-              <path
-                d="M43 2V1H42H2H1V2V60V61H2H42H43V60V2Z"
-                stroke-width="2"
-              ></path>
-              <path
-                d="M38 5L39 5L39 6L39 56L39 57L38 57L5.99998 57L4.99998 57L4.99998 56L4.99998 6L4.99998 5L5.99998 5L38 5Z"
-                stroke-width="2"
-              ></path>
-              <path
-                d="M6 56L38 30.9393L6 6"
-                stroke-width="2"
-                stroke-miterlimit="10"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></path>
-              <path
-                d="M85 2V1H84H44H43V2V60V61H44H84H85V60V2Z"
-                stroke-width="2"
-              ></path>
-              <path
-                d="M80 5L81 5L81 6L81 56L81 57L80 57L48 57L47 57L47 56L47 6L47 5L48 5L80 5Z"
-                stroke-width="2"
-              ></path>
-              <path
-                d="M68 27.705L67.295 27L64.5 29.795L61.705 27L61 27.705L63.795 30.5L61 33.295L61.705 34L64.5 31.205L67.295 34L68 33.295L65.205 30.5L68 27.705Z"
-                fill="#D26050"
-              ></path>
-            </svg>
-          </div>
-          <div class="btnw winThree">
-            <svg
-              id="windowIco"
-              width="128"
-              height="62"
-              viewBox="0 0 128 62"
-              xmlns="http://www.w3.org/2000/svg"
-              data-svg="d3"
-            >
-              <path
-                d="M43 2V1H42H2H1V2V60V61H2H42H43V60V2Z"
-                stroke-width="2"
-              ></path>
-              <path
-                d="M38 5L39 5L39 6L39 56L39 57L38 57L5.99998 57L4.99998 57L4.99998 56L4.99998 6L4.99998 5L5.99998 5L38 5Z"
-                stroke-width="2"
-              ></path>
-              <path
-                d="M26 27.705L25.295 27L22.5 29.795L19.705 27L19 27.705L21.795 30.5L19 33.295L19.705 34L22.5 31.205L25.295 34L26 33.295L23.205 30.5L26 27.705Z"
-                fill="#6196BD"
-              ></path>
-              <path
-                d="M127 2V1H126H86H85V2V60V61H86H126H127V60V2Z"
-                stroke-width="2"
-              ></path>
-              <path
-                d="M122 5L123 5L123 6L123 56L123 57L122 57L90 57L89 57L89 56L89 6L89 5L90 5L122 5Z"
-                stroke-width="2"
-              ></path>
-              <path
-                d="M110 27.705L109.295 27L106.5 29.795L103.705 27L103 27.705L105.795 30.5L103 33.295L103.705 34L106.5 31.205L109.295 34L110 33.295L107.205 30.5L110 27.705Z"
-                fill="#6196BD"
-              ></path>
-              <path
-                d="M85 2V1H84H44H43V2V60V61H44H84H85V60V2Z"
-                stroke-width="2"
-              ></path>
-              <path
-                d="M80 5L81 5L81 6L81 56L81 57L80 57L48 57L47 57L47 56L47 6L47 5L48 5L80 5Z"
-                stroke-width="2"
-              ></path>
-              <path
-                d="M48 56L80 30.9393L48 6"
-                stroke-width="2"
-                stroke-miterlimit="10"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></path>
-            </svg>
-          </div>
+
+          <a href="#winOne"
+            ><div class="btnw winOne">
+              <svg
+                id="windowIco"
+                width="44"
+                height="62"
+                viewBox="0 0 44 62"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                data-svg="a2"
+                uk-tooltip="title: Поворотньо відкидне; pos: right"
+                title=""
+                aria-expanded="false"
+              >
+                <path
+                  d="M43 2V1H42H2H1V2V60V61H2H42H43V60V2Z"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M38 5L39 5L39 6L39 56L39 57L38 57L5.99998 57L4.99998 57L4.99998 56L4.99998 6L4.99998 5L5.99998 5L38 5Z"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M6 56L38 30.9393L6 6"
+                  stroke-width="2"
+                  stroke-miterlimit="10"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+              </svg></div
+          ></a>
+          <a href="#winTwo"
+            ><div class="btnw winTwo">
+              <svg
+                id="windowIco"
+                width="86"
+                height="62"
+                viewBox="0 0 86 62"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                data-svg="b6"
+              >
+                <path
+                  d="M43 2V1H42H2H1V2V60V61H2H42H43V60V2Z"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M38 5L39 5L39 6L39 56L39 57L38 57L5.99998 57L4.99998 57L4.99998 56L4.99998 6L4.99998 5L5.99998 5L38 5Z"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M6 56L38 30.9393L6 6"
+                  stroke-width="2"
+                  stroke-miterlimit="10"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+                <path
+                  d="M85 2V1H84H44H43V2V60V61H44H84H85V60V2Z"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M80 5L81 5L81 6L81 56L81 57L80 57L48 57L47 57L47 56L47 6L47 5L48 5L80 5Z"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M68 27.705L67.295 27L64.5 29.795L61.705 27L61 27.705L63.795 30.5L61 33.295L61.705 34L64.5 31.205L67.295 34L68 33.295L65.205 30.5L68 27.705Z"
+                  fill="#D26050"
+                ></path>
+              </svg></div
+          ></a>
+          <a href="#winThree">
+            <div class="btnw winThree">
+              <svg
+                id="windowIco"
+                width="128"
+                height="62"
+                viewBox="0 0 128 62"
+                xmlns="http://www.w3.org/2000/svg"
+                data-svg="d3"
+              >
+                <path
+                  d="M43 2V1H42H2H1V2V60V61H2H42H43V60V2Z"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M38 5L39 5L39 6L39 56L39 57L38 57L5.99998 57L4.99998 57L4.99998 56L4.99998 6L4.99998 5L5.99998 5L38 5Z"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M26 27.705L25.295 27L22.5 29.795L19.705 27L19 27.705L21.795 30.5L19 33.295L19.705 34L22.5 31.205L25.295 34L26 33.295L23.205 30.5L26 27.705Z"
+                  fill="#6196BD"
+                ></path>
+                <path
+                  d="M127 2V1H126H86H85V2V60V61H86H126H127V60V2Z"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M122 5L123 5L123 6L123 56L123 57L122 57L90 57L89 57L89 56L89 6L89 5L90 5L122 5Z"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M110 27.705L109.295 27L106.5 29.795L103.705 27L103 27.705L105.795 30.5L103 33.295L103.705 34L106.5 31.205L109.295 34L110 33.295L107.205 30.5L110 27.705Z"
+                  fill="#6196BD"
+                ></path>
+                <path
+                  d="M85 2V1H84H44H43V2V60V61H44H84H85V60V2Z"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M80 5L81 5L81 6L81 56L81 57L80 57L48 57L47 57L47 56L47 6L47 5L48 5L80 5Z"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M48 56L80 30.9393L48 6"
+                  stroke-width="2"
+                  stroke-miterlimit="10"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+              </svg></div
+          ></a>
         </div>
       </section>
       <section>
@@ -139,17 +143,17 @@
           <div class="hText"><h2>Enter window size</h2></div>
           <div class="mesure">
             <div class="products">
-              <div class="winImg winOne">
+              <div id="winOne" class="winImg winOne">
                 <img src="img/w1-min.png" alt="windowOne" />
               </div>
-              <div class="winImg winTwo none">
+              <div id="winTwo" class="winImg winTwo none">
                 <img src="img/w2-min.png" alt="windowTwo" />
               </div>
-              <div class="winImg winThree none">
+              <div id="winThree" class="winImg winThree none">
                 <img src="img/w3-min.png" alt="windowThree" />
               </div>
               <div class="wHeight">
-                <div>
+                <div class="inpFieldH">
                   <input
                     type="range"
                     id="wHeight"
@@ -164,14 +168,14 @@
                     value="1000"
                     min="1000"
                     max="2500"
-                    id="wHeightSize"
+                    id="wHeightSizes"
                     class="wHeightSize"
-                  />
+                  /><label for="wHeightSizes" class="inpLabelH">mm</label>
                 </div>
               </div>
             </div>
             <div class="wWidth">
-              <div>
+              <div class="inpFieldW">
                 <input
                   type="range"
                   id="wWidth"
@@ -180,15 +184,44 @@
                   max="3000"
                   data-rangeW
                 />
+                <div class="inInp">
+                  <input
+                    type="number"
+                    value="800"
+                    id="wWidthSizes"
+                    class="wWidthSize"
+                  /><label for="wWidthSizes" class="inpLabelW">mm</label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="moreOptions">
+          <div class="optionCont">
+            <a href="#winOne">
+              <button class="calcButton">Calculate</button>
+            </a>
+            <div class="checkField">
+              <div class="btn-group" role="group" data-bs-toggle="buttons">
+                <label class="btn btn-primary">More options</label>
                 <input
-                  type="number"
-                  value="800"
-                  id="wWidthSize"
-                  class="wWidthSize"
+                  type="checkbox"
+                  class="me-2"
+                  name=""
+                  id=""
+                  autocomplete="off"
                 />
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <section>
+        <div class="totalCost">
+          <div class="totText">Approximate cost of manufacture:</div>
+          <div class="totNum">0</div>
         </div>
       </section>
     </div>
