--- a/wnCCR/index.html
+++ b/wnCCR/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <section>
         <div class="winType">
-          <div class="hText"><h2>Select type of window</h2></div>
+          <div class="hText"><h2>Select type</h2></div>
 
           <a href="#winOne"
             ><div class="btnw winOne">
@@ -25,6 +25,7 @@
                 xmlns="http://www.w3.org/2000/svg"
                 data-svg="a2"
                 aria-expanded="false"
+                
               >
                 <path
                   d="M43 2V1H42H2H1V2V60V61H2H42H43V60V2Z"
